--- a/index.html
+++ b/index.html
@@ -4,14 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Moto 3D con MindAR</title>
-
-    <!-- A-Frame -->
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-
-    <!-- MindAR -->
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.0/dist/mindar-image-aframe.prod.js"></script>
   </head>
-
   <body>
     <a-scene
       mindar-image="imageTargetSrc: ./rueda.mind;"
@@ -20,24 +15,22 @@
       vr-mode-ui="enabled: false"
       device-orientation-permission-ui="enabled: true"
     >
-      <!-- Carga de modelos -->
       <a-assets>
         <a-asset-item 
           id="rueda3D" 
           src="./rueda.glb"
         ></a-asset-item>
       </a-assets>
-
-      <!-- Cámara -->
-      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-
-      <!-- Cuando detecta la imagen -->
+      <a-camera position="0 0 0" 
+        look-controls="enabled: false"
+        >
+        </a-camera>
       <a-entity mindar-image-target="targetIndex: 0">
         <a-gltf-model
           src="#rueda3D"
           position="0 0 0"
-          rotation="0 0 0"
-          scale="0.5 0.5 0.5"
+          rotation="0 90 0"
+          scale="0.3 0.3 0.3"
           animation="property: rotation; to: 0 360 0; loop: true; dur: 3000"
         >
         </a-gltf-model>
@@ -45,4 +38,5 @@
     </a-scene>
   </body>
 </html>
+
 
